--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,4 +1,4 @@
-configuracion.texto=Configurando entorno desarrollo
-configuracion.autor.nombre=Sara
-configuracion.autor.email=sara.ramos@mail.com
+configuracion.texto=Configurando entorno desarrollo ....
+configuracion.autor.nombre=Jonh Doe
+configuracion.autor.email=jonh.ramos@mail.com
 
